--- a/assets/style.css
+++ b/assets/style.css
@@ -84,3 +84,12 @@ html, body {
     top: 46%;
     transform: translateY(-50%);
 }
+
+#transition {
+    display: none;
+    z-index: 10;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+}
