--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,8 @@
 }
 
 html, body {
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     margin: 0;
     overflow: hidden;
     font-family: 'Pixel';
