--- a/assets/style.css
+++ b/assets/style.css
@@ -27,9 +27,12 @@
     }
 }
 
-html, body {
+body {
     width: 100vw;
     height: 100vh;
+}
+
+html, body {
     margin: 0;
     overflow: hidden;
     font-family: 'Pixel';
