--- a/assets/style.css
+++ b/assets/style.css
@@ -27,11 +27,6 @@
     }
 }
 
-body {
-    width: 100vw;
-    height: 100vh;
-}
-
 html, body {
     margin: 0;
     overflow: hidden;
@@ -41,6 +36,15 @@ html, body {
     -webkit-user-select: none;
     -webkit-touch-callout: none;
     -webkit-tap-highlight-color: transparent;
+    width: 100%;
+    height: 100%;
+}
+
+@media (display-mode: fullscreen), (display-mode: standalone) {
+    html, body {
+        width: 100vw;
+        height: 100vh;
+    }
 }
 
 .container {
