--- a/assets/style.css
+++ b/assets/style.css
@@ -15,12 +15,18 @@
         width: calc(var(--vh) * 56.25);
         height: calc(var(--vh) * 100);
     }
+    body {
+        background: black;
+    }
 }
 
 @media (max-aspect-ratio: 703/1250) {
     .embed-responsive {
         width: calc(var(--vw) * 100);
         height: calc(var(--vw) * 177.77);
+    }
+    body {
+        background: linear-gradient(to bottom,#282C3C 0%,#282C3C 50%,#4F3D2D 50%,#4F3D2D 100%); /* W3C */
     }
 }
 
@@ -29,13 +35,15 @@
         width: 100%;
         height: 100%;
     }
+    body {
+        background: black;
+    }
 }
 
 html, body {
     margin: 0;
     overflow: hidden;
     font-family: 'Pixel';
-    background-color: black;
     user-select: none;
     -webkit-user-select: none;
     -webkit-touch-callout: none;
@@ -58,7 +66,6 @@ html, body {
 }
 
 .embed-responsive {
-    background: black;
     margin: auto;
     position: absolute;
     top: 0; bottom: 0; /* vertical center */
@@ -79,23 +86,23 @@ html, body {
 #loading {
     z-index: 2;
     position: absolute;
-    display: block;
     width: 100%;
     height: 100%;
     background-color: #282C3C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #loading p {
     width: 100%;
     color: white;
-    text-shadow: -3px -3px 0 #000, 3px -3px 0 #000, -3px 3px 0 #000, 3px 3px 0 #000;
+    text-shadow: rgb(0, 0, 0) 3px 0px 0px, rgb(0, 0, 0) 2.83487px 0.981584px 0px, rgb(0, 0, 0) 2.35766px 1.85511px 0px, rgb(0, 0, 0) 1.62091px 2.52441px 0px, rgb(0, 0, 0) 0.705713px 2.91581px 0px, rgb(0, 0, 0) -0.287171px 2.98622px 0px, rgb(0, 0, 0) -1.24844px 2.72789px 0px, rgb(0, 0, 0) -2.07227px 2.16926px 0px, rgb(0, 0, 0) -2.66798px 1.37182px 0px, rgb(0, 0, 0) -2.96998px 0.42336px 0px, rgb(0, 0, 0) -2.94502px -0.571704px 0px, rgb(0, 0, 0) -2.59586px -1.50383px 0px, rgb(0, 0, 0) -1.96093px -2.27041px 0px, rgb(0, 0, 0) -1.11013px -2.78704px 0px, rgb(0, 0, 0) -0.137119px -2.99686px 0px, rgb(0, 0, 0) 0.850987px -2.87677px 0px, rgb(0, 0, 0) 1.74541px -2.43999px 0px, rgb(0, 0, 0) 2.44769px -1.73459px 0px, rgb(0, 0, 0) 2.88051px -0.838247px 0px;
     left: 0;
     display: block;
     position: absolute;
-    font-size: 1.8em;
+    font-size: 1.7em;
     text-align: center;
-    top: 46%;
-    transform: translateY(-50%);
 }
 
 #transition {
